Show names instead of ids in Match and GroupPlayer
